--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -1,15 +1,12 @@
 @import 'variables/variables';
+@import 'variables/mixins';
 
 .contact {
 	margin-top: 10vh;
 	h1,
 	h2,
 	th {
-		font-family: $title-font;
-		font-weight: 300;
-		color: white;
-		opacity: 0.85;
-		text-shadow: 2px 2px 3px $green4;
+		@include title-styles(white);
 	}
 	h1 {
 		font-size: 5vw;
@@ -29,23 +26,14 @@
 			width: 500px;
 			padding: 16px;
 			background-color: $green1;
-			border-radius: 10px;
 		}
 
 		.banner {
+			@include parallax-banner('../images/banner-placeholder-3.jpg');
+			@extend %centered-column-flexbox;
+			grid-area: 1 / 1 / 2 / 3;
 			height: 100%;
 			width: 100%;
-			grid-area: 1 / 1 / 2 / 3;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-				url(../images/banner-placeholder-3.jpg);
-			background-position: 50% 50%;
-			background-attachment: fixed;
-			background-repeat: no-repeat;
-			background-size: cover;
 			h1 {
 				margin-bottom: 5vh;
 			}
@@ -55,23 +43,17 @@
 			}
 		}
 		.opening-paragraph {
+			@extend %light-wallpaper;
+			@extend %left-card;
 			grid-area: 2 / 1 / 3 / 2;
-			box-shadow: -7px 10px 10px $green4;
-			background: url('../images/doggo-background-texture-3.png');
-			background-repeat: no-repeat;
-			background-size: cover;
-			background-position: 3%;
 		}
 		.phone-numbers,
 		.address {
+			@extend %centered-column-flexbox;
 			width: 100%;
 			height: 100%;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
 			p {
-				box-shadow: 7px 10px 10px $green4;
+				@extend %right-card;
 				text-align: center;
 				h2 {
 					color: black;
@@ -79,36 +61,30 @@
 					padding-bottom: 20px;
 				}
 				padding-bottom: 20px;
-				a {
-					text-decoration: none;
-				}
 			}
 		}
 		.phone-numbers {
-			p {
-				box-shadow: 7px 10px 10px $gold4;
-			}
-		}
-		.phone-numbers {
-			background: url('../images/doggo-background-texture-2-crop-2.png');
-			background-repeat: repeat;
-			background-size: cover;
+			@extend %dark-wallpaper;
 			p {
 				font-size: 1.5rem;
 				background: radial-gradient($gold2, $gold3);
+				box-shadow: 7px 10px 10px $gold4;
 				h2 {
 					font-size: 2.5rem;
 				}
-				span {
-					font-size: 2rem;
-					padding-left: 1rem;
+				a {
+					text-decoration: none;
+					span {
+						font-size: 2rem;
+						padding-left: 1rem;
+					}
 				}
 			}
 		}
 		iframe {
+			grid-area: 3 / 1 / 3 / 3;
 			width: 100%;
 			height: 100%;
-			grid-area: 3 / 1 / 3 / 3;
 		}
 		.table-background {
 			grid-area: 4 / 1 / 5 / 2;
@@ -119,14 +95,11 @@
 			background-size: cover;
 		}
 		table {
+			@extend %left-card;
 			grid-area: 4 / 1 / 5 / 2;
 			width: 500px;
-			background-color: $green1;
 			padding: 20px;
-			border-radius: 10px;
-			box-shadow: 7px 10px 10px $green4;
 			background-color: $green1;
-			border: 1px solid $green2;
 			tr {
 				th {
 					font-size: 2rem;
@@ -147,37 +120,22 @@
 		.address {
 			grid-area: 4 / 2 / 5 / 3;
 			p {
-				background: url('../images/doggo-background-texture-3.png');
-				background-repeat: no-repeat;
-				background-size: cover;
-				background-position: 3%;
+				@extend %light-wallpaper;
 			}
 		}
 	}
 	.review-us {
 		display: grid;
 		grid-template-columns: 1fr 1fr;
-		justify-items: center;
-		align-items: center;
-		background-color: $green2;
+		place-items: center;
 		padding-bottom: 10vh;
+		background-color: $green2;
 		.banner {
+			@include parallax-banner('../images/banner-placeholder-4.jpg', 80%);
+			@extend %centered-column-flexbox;
+			grid-column: 1 / 3;
 			height: 40vh;
 			width: 100%;
-			grid-column: 1 / 3;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: center;
-			background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-				url(../images/banner-placeholder-4.jpg);
-			background-position: 50% 80%;
-			background-attachment: fixed;
-			background-repeat: no-repeat;
-			background-size: cover;
-		}
-		p {
-			margin-top: 10vh;
 		}
 	}
 }
