--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,14 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 nav {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-items: center;
   height: 10vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
   background-color: #ecfaf3;
   border-bottom: 1px solid #13614d; }
   nav .logo {
@@ -26,19 +26,15 @@ nav {
   nav ul {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    list-style-type: none;
-    justify-items: center;
-    align-items: center;
+    place-items: center;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    list-style-type: none; }
     nav ul li {
-      transition: all 0.3s;
+      display: grid;
+      place-items: center;
       height: 100%;
-      width: 100%;
-      flex-grow: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center; }
+      width: 100%; }
       nav ul li a {
         font-family: "Montserrat", sans-serif;
         font-weight: 400;
