--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -1,14 +1,14 @@
 @import 'variables/variables';
 
 nav {
-	z-index: 1000;
-	position: fixed;
-	top: 0;
-	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	align-items: center;
 	height: 10vh;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	z-index: 1000;
 	background-color: $background-color;
 	border-bottom: 1px solid $green5;
 	.logo {
@@ -29,19 +29,15 @@ nav {
 	ul {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
-		list-style-type: none;
-		justify-items: center;
-		align-items: center;
+		place-items: center;
 		width: 100%;
 		height: 100%;
+		list-style-type: none;
 		li {
-			transition: all 0.3s;
+			display: grid;
+			place-items: center;
 			height: 100%;
 			width: 100%;
-			flex-grow: 1;
-			display: flex;
-			justify-content: center;
-			align-items: center;
 			a {
 				font-family: $title-font;
 				font-weight: 400;
@@ -50,17 +46,10 @@ nav {
 				text-decoration: none;
 			}
 		}
-		li:nth-child(1) {
-			background-color: $green1;
-		}
-		li:nth-child(2) {
-			background-color: $green2;
-		}
-		li:nth-child(3) {
-			background-color: $green3;
-		}
-		li:nth-child(4) {
-			background-color: $green4;
+		@for $i from 1 through 4 {
+			li:nth-child(#{$i}) {
+				background-color: $green#{$i};
+			}
 		}
 	}
 }
