--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -3,5 +3,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 footer {
-  min-height: 20vh;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 15vh;
+  font-family: "Montserrat", sans-serif;
+  color: white;
   background-color: #13614d; }
+  footer a {
+    text-decoration: none;
+    color: white; }
+  footer ul {
+    list-style-type: none; }
