--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -29,7 +29,8 @@ nav {
     place-items: center;
     width: 100%;
     height: 100%;
-    list-style-type: none; }
+    list-style-type: none;
+    transition: all 1s; }
     nav ul li {
       display: grid;
       place-items: center;
@@ -41,6 +42,10 @@ nav {
         font-size: 30px;
         color: black;
         text-decoration: none; }
+    nav ul .visible {
+      opacity: 1; }
+    nav ul .invisible {
+      opacity: 0; }
     nav ul li:nth-child(1) {
       background-color: #d7fbe8; }
     nav ul li:nth-child(2) {
