--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 nav {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -47,10 +53,14 @@ nav {
     nav ul .invisible {
       opacity: 0; }
     nav ul li:nth-child(1) {
-      background-color: #d7fbe8; }
+      background-color: #d7fbe8;
+      animation: fadeIn 0.7s 0.3s backwards ease-in; }
     nav ul li:nth-child(2) {
-      background-color: #9df3c4; }
+      background-color: #9df3c4;
+      animation: fadeIn 0.7s 0.6s backwards ease-in; }
     nav ul li:nth-child(3) {
-      background-color: #62d2a2; }
+      background-color: #62d2a2;
+      animation: fadeIn 0.7s 0.9s backwards ease-in; }
     nav ul li:nth-child(4) {
-      background-color: #1fab89; }
+      background-color: #1fab89;
+      animation: fadeIn 0.7s 1.2s backwards ease-in; }
