--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -2,7 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
 @keyframes fadeIn {
   from {
-    opacity: 0; }
+    opacity: 0;
+    transform: translateX(200%); }
+  80% {
+    opacity: 0.7; }
   to {
     opacity: 1; } }
 
@@ -54,13 +57,13 @@ nav {
       opacity: 0; }
     nav ul li:nth-child(1) {
       background-color: #d7fbe8;
-      animation: fadeIn 0.7s 0.3s backwards ease-in; }
+      animation: fadeIn 0.7s 0.2s backwards ease-out; }
     nav ul li:nth-child(2) {
       background-color: #9df3c4;
-      animation: fadeIn 0.7s 0.6s backwards ease-in; }
+      animation: fadeIn 0.7s 0.4s backwards ease-out; }
     nav ul li:nth-child(3) {
       background-color: #62d2a2;
-      animation: fadeIn 0.7s 0.9s backwards ease-in; }
+      animation: fadeIn 0.7s 0.6s backwards ease-out; }
     nav ul li:nth-child(4) {
       background-color: #1fab89;
-      animation: fadeIn 0.7s 1.2s backwards ease-in; }
+      animation: fadeIn 0.7s 0.8s backwards ease-out; }
