--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alegreya:ital@0;1&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,300;1,400&display=swap");
-@keyframes fadeIn {
+@keyframes fadeInFromRight {
   from {
     opacity: 0;
     transform: translateX(200%); }
@@ -8,6 +8,11 @@
     opacity: 0.7; }
   to {
     opacity: 1; } }
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%); }
+  to { } }
 
 nav {
   display: grid;
@@ -22,7 +27,8 @@ nav {
   border-bottom: 1px solid #13614d; }
   nav .logo {
     display: flex;
-    align-items: center; }
+    align-items: center;
+    animation: slideFromLeft 0.9s ease-out; }
     nav .logo img {
       height: 8vh;
       width: auto;
@@ -57,13 +63,13 @@ nav {
       opacity: 0; }
     nav ul li:nth-child(1) {
       background-color: #d7fbe8;
-      animation: fadeIn 0.7s 0.2s backwards ease-out; }
+      animation: fadeInFromRight 0.7s 0.2s backwards ease-out; }
     nav ul li:nth-child(2) {
       background-color: #9df3c4;
-      animation: fadeIn 0.7s 0.4s backwards ease-out; }
+      animation: fadeInFromRight 0.7s 0.4s backwards ease-out; }
     nav ul li:nth-child(3) {
       background-color: #62d2a2;
-      animation: fadeIn 0.7s 0.6s backwards ease-out; }
+      animation: fadeInFromRight 0.7s 0.6s backwards ease-out; }
     nav ul li:nth-child(4) {
       background-color: #1fab89;
-      animation: fadeIn 0.7s 0.8s backwards ease-out; }
+      animation: fadeInFromRight 0.7s 0.8s backwards ease-out; }
