--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -15,6 +15,7 @@ nav {
 	.logo {
 		display: flex;
 		align-items: center;
+		animation: slideFromLeft 0.9s ease-out;
 		img {
 			height: 8vh;
 			width: auto;
@@ -64,7 +65,7 @@ nav {
 		@for $i from 1 through 4 {
 			li:nth-child(#{$i}) {
 				background-color: map-get($map: $color-map, $key: $i);
-				animation: fadeIn 0.7s ($i * 0.2s) backwards ease-out;
+				animation: fadeInFromRight 0.7s ($i * 0.2s) backwards ease-out;
 			}
 		}
 	}
