--- a/src/scss/variables/_animations.scss
+++ b/src/scss/variables/_animations.scss
@@ -1,4 +1,4 @@
-@keyframes fadeIn {
+@keyframes fadeInFromRight {
 	from {
 		opacity: 0;
 		transform: translateX(200%);
@@ -8,5 +8,13 @@
 	}
 	to {
 		opacity: 1;
+	}
+}
+
+@keyframes slideFromLeft {
+	from {
+		transform: translateX(-100%);
+	}
+	to {
 	}
 }
