--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -9,10 +9,25 @@
   to {
     opacity: 1; } }
 
+@keyframes fadeInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
 @keyframes slideFromLeft {
   from {
     transform: translateX(-100%); }
   to { } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
 
 nav {
   display: grid;
