--- a/src/scss/variables/_animations.scss
+++ b/src/scss/variables/_animations.scss
@@ -11,10 +11,32 @@
 	}
 }
 
+@keyframes fadeInFromLeft {
+	from {
+		opacity: 0;
+		transform: translateX(-200%);
+	}
+	80% {
+		opacity: 0.7;
+	}
+	to {
+		opacity: 1;
+	}
+}
+
 @keyframes slideFromLeft {
 	from {
 		transform: translateX(-100%);
 	}
 	to {
+	}
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
 	}
 }
