--- a/src/css/review.css
+++ b/src/css/review.css
@@ -22,6 +22,35 @@
   background-repeat: no-repeat;
   background-size: cover; }
 
+@keyframes fadeInFromRight {
+  from {
+    opacity: 0;
+    transform: translateX(200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%); }
+  to { } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .reviews {
   width: 100%; }
   .reviews .reviews-banner {
@@ -31,7 +60,8 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
-    height: 40vh; }
+    height: 40vh;
+    animation: fadeIn 1s ease-out backwards; }
     .reviews .reviews-banner h2 {
       font-family: "Montserrat", sans-serif;
       font-weight: 300;
@@ -50,7 +80,8 @@
       grid-area: 1 / 1 / span 10 / span 4;
       background: url("../images/doggo-background-texture-2-crop-2.png");
       background-repeat: repeat;
-      background-size: contain; }
+      background-size: contain;
+      animation: fadeIn 1s 0.3s ease-out backwards; }
     .reviews .reviews-container .review {
       display: flex;
       flex-direction: column;
@@ -59,7 +90,8 @@
       width: 100%;
       min-height: 20vh;
       margin-bottom: 5vh;
-      background-color: #d7fbe8; }
+      background-color: #d7fbe8;
+      z-index: 100; }
       .reviews .reviews-container .review p {
         padding: 16px; }
       .reviews .reviews-container .review p:nth-child(1)::before,
@@ -78,18 +110,26 @@
         font-style: italic;
         padding-left: 50px; }
     .reviews .reviews-container .review1 {
-      grid-area: 2 / 2/span 1/span 4; }
+      grid-area: 2 / 2/span 1/span 4;
+      animation: fadeInFromLeft 0.7s ease-out backwards; }
     .reviews .reviews-container .review2 {
-      grid-area: 3 / 4/span 1/span 4; }
+      grid-area: 3 / 4/span 1/span 4;
+      animation: fadeInFromRight 0.7s ease-out backwards; }
     .reviews .reviews-container .review3 {
-      grid-area: 4 / 2/span 1/span 4; }
+      grid-area: 4 / 2/span 1/span 4;
+      animation: fadeInFromLeft 0.7s ease-out backwards; }
     .reviews .reviews-container .review4 {
-      grid-area: 5 / 4/span 1/span 4; }
+      grid-area: 5 / 4/span 1/span 4;
+      animation: fadeInFromRight 0.7s ease-out backwards; }
     .reviews .reviews-container .review5 {
-      grid-area: 6 / 2/span 1/span 4; }
+      grid-area: 6 / 2/span 1/span 4;
+      animation: fadeInFromLeft 0.7s ease-out backwards; }
     .reviews .reviews-container .review6 {
-      grid-area: 7 / 4/span 1/span 4; }
+      grid-area: 7 / 4/span 1/span 4;
+      animation: fadeInFromRight 0.7s ease-out backwards; }
     .reviews .reviews-container .review7 {
-      grid-area: 8 / 2/span 1/span 4; }
+      grid-area: 8 / 2/span 1/span 4;
+      animation: fadeInFromLeft 0.7s ease-out backwards; }
     .reviews .reviews-container .review8 {
-      grid-area: 9 / 4/span 1/span 4; }
+      grid-area: 9 / 4/span 1/span 4;
+      animation: fadeInFromRight 0.7s ease-out backwards; }
