--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -1,5 +1,6 @@
 @import './variables/variables';
 @import './variables/mixins';
+@import 'variables/animations';
 
 .reviews {
 	width: 100%;
@@ -8,6 +9,7 @@
 		@extend %centered-column-flexbox;
 		width: 100%;
 		height: 40vh;
+		animation: fadeIn 1s ease-out backwards;
 		h2 {
 			@include title-styles(white);
 			font-size: 3.5vw;
@@ -25,6 +27,7 @@
 			background: url('../images/doggo-background-texture-2-crop-2.png');
 			background-repeat: repeat;
 			background-size: contain;
+			animation: fadeIn 1s 0.3s ease-out backwards;
 		}
 		.review {
 			display: flex;
@@ -35,6 +38,7 @@
 			min-height: 20vh;
 			margin-bottom: 5vh;
 			background-color: $green1;
+			z-index: 100;
 			p {
 				padding: 16px;
 			}
@@ -62,10 +66,12 @@
 				@if ($i % 2 == 1) {
 					grid-area: #{$i + 1} / 2 / span 1 / span 4;
 					@extend %left-card;
+					animation: fadeInFromLeft 0.7s ease-out backwards;
 				} @else {
 					grid-area: #{$i + 1} / 4 / span 1 / span 4;
 					@extend %light-wallpaper;
 					@extend %right-card;
+					animation: fadeInFromRight 0.7s ease-out backwards;
 				}
 			}
 		}
