--- a/src/css/about.css
+++ b/src/css/about.css
@@ -16,6 +16,44 @@
   background-repeat: no-repeat;
   background-size: cover; }
 
+@keyframes fadeInFromRight {
+  from {
+    opacity: 0;
+    transform: translateX(200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromAbove {
+  from {
+    opacity: 0;
+    transform: translateY(-120%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%); }
+  to { } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .about-container {
   display: flex;
   flex-direction: column;
@@ -43,25 +81,29 @@
       height: 100%;
       width: 100%;
       background-color: #9df3c4; }
-      .about-container .family .family-text h1 {
-        margin-bottom: 7vh;
-        font-size: 5vw;
+      .about-container .family .family-text .overflow-container {
         margin-left: 5vw; }
-      .about-container .family .family-text p {
-        width: 30vw;
-        margin-left: 5vw; }
+        .about-container .family .family-text .overflow-container h1 {
+          margin-bottom: 7vh;
+          font-size: 5vw;
+          animation: fadeInFromAbove 1s 0.3s ease-out backwards; }
+        .about-container .family .family-text .overflow-container p {
+          width: 30vw;
+          animation: fadeInFromLeft 1s 0.7s ease-out backwards; }
     .about-container .family .image-container {
       display: grid;
       place-items: center;
       height: 100%;
       width: 100%;
-      background-position: 3%; }
+      background-position: 3%;
+      animation: fadeIn 1s 0.5s ease-out backwards; }
       .about-container .family .image-container img {
         height: 30vw;
         width: 30vw;
         border-radius: 50%;
         object-fit: cover;
-        object-position: 50% 50%; }
+        object-position: 50% 50%;
+        animation: fadeIn 1s 1.7s ease-out backwards; }
   .about-container .facilities .banner {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../images/about-banner-placeholder.jpg");
     background-position: 50% 50%;
