--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -18,6 +18,15 @@
   to {
     opacity: 1; } }
 
+@keyframes fadeInFromAbove {
+  from {
+    opacity: 0;
+    transform: translateY(-120%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
 @keyframes slideFromLeft {
   from {
     transform: translateX(-100%); }
