--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -27,6 +27,15 @@
   to {
     opacity: 1; } }
 
+@keyframes fadeInFromBelow {
+  from {
+    opacity: 0;
+    transform: translateY(120%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
 @keyframes slideFromLeft {
   from {
     transform: translateX(-100%); }
