--- a/src/scss/variables/_animations.scss
+++ b/src/scss/variables/_animations.scss
@@ -35,6 +35,18 @@
 		opacity: 1;
 	}
 }
+@keyframes fadeInFromBelow {
+	from {
+		opacity: 0;
+		transform: translateY(120%);
+	}
+	80% {
+		opacity: 0.7;
+	}
+	to {
+		opacity: 1;
+	}
+}
 
 @keyframes slideFromLeft {
 	from {
