--- a/src/css/about.css
+++ b/src/css/about.css
@@ -139,7 +139,8 @@
     .about-container .facilities .tiles img {
       width: 100%;
       height: 50vh;
-      object-fit: cover; }
+      object-fit: cover;
+      animation: fadeIn 1s backwards; }
     .about-container .facilities .tiles p {
       position: relative;
       text-align: center;
