--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -76,6 +76,7 @@
 				width: 100%;
 				height: 50vh;
 				object-fit: cover;
+				animation: fadeIn 1s backwards;
 			}
 			p {
 				@extend %light-wallpaper;
