--- a/src/css/services.css
+++ b/src/css/services.css
@@ -15,6 +15,53 @@
   background-repeat: no-repeat;
   background-size: cover; }
 
+@keyframes fadeInFromRight {
+  from {
+    opacity: 0;
+    transform: translateX(200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-200%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromAbove {
+  from {
+    opacity: 0;
+    transform: translateY(-120%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes fadeInFromBelow {
+  from {
+    opacity: 0;
+    transform: translateY(120%); }
+  80% {
+    opacity: 0.7; }
+  to {
+    opacity: 1; } }
+
+@keyframes slideFromLeft {
+  from {
+    transform: translateX(-100%); }
+  to { } }
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
 .services {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -46,13 +93,15 @@
       place-items: center;
       height: 100%;
       width: 100%;
-      background-position: 3%; }
+      background-position: 3%;
+      animation: fadeIn 1s 0.5s ease-out backwards; }
       .services .our-services .image-container img {
         height: 30vw;
         width: 30vw;
         border-radius: 50%;
         object-fit: cover;
-        object-position: 50% 30%; }
+        object-position: 50% 30%;
+        animation: fadeIn 1s 1.7s ease-out backwards; }
     .services .our-services .container {
       display: flex;
       flex-direction: column;
@@ -61,13 +110,17 @@
       height: 100%;
       width: 100%;
       background-color: #9df3c4; }
-      .services .our-services .container h1 {
-        font-size: 5vw;
-        margin-bottom: 7vh;
+      .services .our-services .container .overflow-container {
         margin-left: 5vw; }
-      .services .our-services .container p {
-        width: 30vw;
-        margin-left: 5vw; }
+        .services .our-services .container .overflow-container h1 {
+          font-size: 5vw;
+          margin-bottom: 7vh;
+          margin-left: 5vw;
+          animation: fadeInFromAbove 1s 0.3s ease-out backwards; }
+        .services .our-services .container .overflow-container p {
+          width: 30vw;
+          margin-left: 5vw;
+          animation: fadeInFromLeft 1s 0.7s ease-out backwards; }
   .services .prices {
     grid-area: 2 / 1 / 3 / 2;
     display: grid;
