--- a/src/css/about.css
+++ b/src/css/about.css
@@ -140,7 +140,7 @@
       width: 100%;
       height: 50vh;
       object-fit: cover;
-      animation: fadeIn 1s backwards; }
+      animation: fadeIn 1s ease-out backwards; }
     .about-container .facilities .tiles p {
       position: relative;
       text-align: center;
@@ -150,8 +150,8 @@
     .about-container .facilities .tiles .tile-3 {
       left: 7px;
       bottom: 10px;
-      animation: fadeInFromLeft 1s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
     .about-container .facilities .tiles .tile-2 {
       right: 7px;
       bottom: 10px;
-      animation: fadeInFromRight 1s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
