--- a/src/css/services.css
+++ b/src/css/services.css
@@ -94,7 +94,7 @@
       height: 100%;
       width: 100%;
       background-position: 3%;
-      animation: fadeIn 1s 0.5s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
       .services .our-services .image-container img {
         height: 30vw;
         width: 30vw;
@@ -132,14 +132,14 @@
     .services .prices h1 {
       font-size: 3.5vw;
       text-align: center;
-      animation: fadeInFromAbove 1s 0.3s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
     .services .prices h2 {
       font-size: 2vw; }
     .services .prices table {
       align-self: start;
       width: 500px;
       padding: 0 20px 20px;
-      animation: fadeInFromLeft 1s 0.7s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
       .services .prices table tr th {
         font-size: 2rem;
         font-weight: 400;
@@ -156,7 +156,7 @@
       width: 500px;
       padding: 20px 20px;
       text-align: center;
-      animation: fadeInFromLeft 1s 0.4s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
       .services .prices p span {
         display: block;
         width: 100%;
@@ -173,7 +173,7 @@
     .services .important-information h1 {
       font-size: 3.5vw;
       text-align: center;
-      animation: fadeInFromAbove 1s 0.5s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
     .services .important-information ul {
       box-sizing: border-box;
       align-self: start;
@@ -185,7 +185,7 @@
       background-color: #d7fbe8;
       border: 1px solid #9df3c4;
       list-style-type: none;
-      animation: fadeInFromRight 1s 0.9s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
       .services .important-information ul li {
         display: flex;
         align-items: center;
@@ -202,7 +202,7 @@
       padding: 20px;
       background-color: #d7fbe8;
       border: 1px solid #9df3c4;
-      animation: fadeInFromRight 1s 0.6s ease-out backwards; }
+      animation: fadeIn 1s ease-out backwards; }
       .services .important-information table tr th {
         font-size: 2rem;
         font-weight: 400; }
