--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -112,14 +112,18 @@
       background-size: cover;
       grid-area: 1 / 1 / 2 / 3;
       height: 100%;
-      width: 100%; }
+      width: 100%;
+      animation: fadeIn 1s ease-out backwards; }
       .contact .contact-info .banner h1 {
-        margin-bottom: 5vh; }
+        margin-bottom: 5vh;
+        animation: fadeIn 1s 0.3s ease-out backwards; }
       .contact .contact-info .banner h2 {
         font-size: 2.5vw;
-        font-style: italic; }
+        font-style: italic;
+        animation: fadeIn 1s 0.6s ease-out backwards; }
     .contact .contact-info .opening-paragraph {
-      grid-area: 2 / 1 / 3 / 2; }
+      grid-area: 2 / 1 / 3 / 2;
+      animation: fadeInFromLeft 1s 0.6s backwards; }
     .contact .contact-info .phone-numbers,
     .contact .contact-info .address {
       width: 100%;
@@ -133,22 +137,26 @@
           color: black;
           font-weight: 400;
           padding-bottom: 20px; }
-    .contact .contact-info .phone-numbers p {
-      font-size: 1.5rem;
-      background: radial-gradient(#e3f39b, #ffbf00);
-      box-shadow: 7px 10px 10px #bf9b30; }
-      .contact .contact-info .phone-numbers p .phone-numbers-header {
-        display: block;
-        font-size: 2.5rem; }
-      .contact .contact-info .phone-numbers p a {
-        text-decoration: none; }
-        .contact .contact-info .phone-numbers p a span {
-          font-size: 2rem;
-          padding-left: 1rem; }
+    .contact .contact-info .phone-numbers {
+      animation: fadeIn 1s 0.3s ease-out backwards; }
+      .contact .contact-info .phone-numbers p {
+        font-size: 1.5rem;
+        background: radial-gradient(#e3f39b, #ffbf00);
+        box-shadow: 7px 10px 10px #bf9b30;
+        animation: fadeIn 1s 0.7s ease-out backwards; }
+        .contact .contact-info .phone-numbers p .phone-numbers-header {
+          display: block;
+          font-size: 2.5rem; }
+        .contact .contact-info .phone-numbers p a {
+          text-decoration: none; }
+          .contact .contact-info .phone-numbers p a span {
+            font-size: 2rem;
+            padding-left: 1rem; }
     .contact .contact-info iframe {
       grid-area: 3 / 1 / 3 / 3;
       width: 100%;
-      height: 100%; }
+      height: 100%;
+      animation: fadeIn 1s 1s ease-out backwards; }
     .contact .contact-info .table-background {
       grid-area: 4 / 1 / 5 / 2;
       height: 100%;
