--- a/src/scss/contact.scss
+++ b/src/scss/contact.scss
@@ -37,18 +37,22 @@
 			grid-area: 1 / 1 / 2 / 3;
 			height: 100%;
 			width: 100%;
+			animation: fadeIn 1s ease-out backwards;
 			h1 {
 				margin-bottom: 5vh;
+				animation: fadeIn 1s 0.3s ease-out backwards;
 			}
 			h2 {
 				font-size: 2.5vw;
 				font-style: italic;
+				animation: fadeIn 1s 0.6s ease-out backwards;
 			}
 		}
 		.opening-paragraph {
 			@extend %light-wallpaper;
 			@extend %left-card;
 			grid-area: 2 / 1 / 3 / 2;
+			animation: fadeInFromLeft 1s 0.6s backwards;
 		}
 		.phone-numbers,
 		.address {
@@ -68,10 +72,12 @@
 		}
 		.phone-numbers {
 			@extend %dark-wallpaper;
+			animation: fadeIn 1s 0.3s ease-out backwards;
 			p {
 				font-size: 1.5rem;
 				background: radial-gradient($gold2, $gold3);
 				box-shadow: 7px 10px 10px $gold4;
+				animation: fadeIn 1s 0.7s ease-out backwards;
 				.phone-numbers-header {
 					display: block;
 					font-size: 2.5rem;
@@ -89,6 +95,7 @@
 			grid-area: 3 / 1 / 3 / 3;
 			width: 100%;
 			height: 100%;
+			animation: fadeIn 1s 1s ease-out backwards;
 		}
 		.table-background {
 			grid-area: 4 / 1 / 5 / 2;
