--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -70,7 +70,7 @@ nav {
         margin-right: 1vw; }
       nav .logo a h4 {
         font-family: "Montserrat", sans-serif;
-        font-size: 3.5vh;
+        font-size: 2rem;
         font-weight: 300;
         color: black; }
   nav ul {
@@ -89,7 +89,7 @@ nav {
       nav ul li a {
         font-family: "Montserrat", sans-serif;
         font-weight: 400;
-        font-size: 30px;
+        font-size: 2rem;
         color: black;
         text-decoration: none; }
     nav ul .visible {
