--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -25,7 +25,7 @@ nav {
 			}
 			h4 {
 				font-family: $title-font;
-				font-size: 3.5vh;
+				font-size: 2rem;
 				font-weight: 300;
 				color: black;
 			}
@@ -47,7 +47,7 @@ nav {
 			a {
 				font-family: $title-font;
 				font-weight: 400;
-				font-size: 30px;
+				font-size: 2rem;
 				color: black;
 				text-decoration: none;
 			}
