landing font size units changed to rem

--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -93,11 +93,11 @@
         opacity: 0.85;
         text-shadow: 2px 2px 3px #1fab89; }
       .landing-container .title-banner .titles h1 {
-        font-size: 5vw;
+        font-size: 5rem;
         margin-bottom: 5vh;
         animation: fadeIn 1s 1s backwards; }
       .landing-container .title-banner .titles h2 {
-        font-size: 2.5vw;
+        font-size: 2.5rem;
         font-style: italic;
         animation: fadeIn 1s 1.3s backwards; }
   .landing-container .description {
@@ -116,7 +116,7 @@
       .landing-container .description .text-container p {
         flex-grow: 1;
         font-family: "Alegreya", serif;
-        font-size: 20px;
+        font-size: 1.25rem;
         padding: 3vh; }
     .landing-container .description .call-to-action {
       display: grid;
@@ -128,7 +128,7 @@
         color: black;
         font-weight: 300;
         padding-bottom: 20px;
-        font-size: 3vw;
+        font-size: 4rem;
         text-shadow: 2px 2px 3px #1fab89;
         text-decoration: none;
         font-family: "Montserrat", sans-serif;
