--- a/src/scss/review.scss
+++ b/src/scss/review.scss
@@ -12,7 +12,7 @@
 		animation: fadeIn 1s ease-out backwards;
 		h2 {
 			@include title-styles(white);
-			font-size: 3.5vw;
+			font-size: 6rem;
 		}
 	}
 	.reviews-container {
@@ -45,7 +45,7 @@
 			p:nth-child(1)::before,
 			p:nth-child(1)::after {
 				content: '“ ';
-				font-size: 32px;
+				font-size: 2rem;
 				font-family: Georgia, 'Times New Roman', Times, serif;
 				color: #134977;
 				font-weight: bold;
@@ -56,7 +56,7 @@
 				content: ' ”';
 			}
 			p:nth-child(2) {
-				font-size: 20px;
+				font-size: 1.25rem;
 				font-style: italic;
 				padding-left: 50px;
 			}
