--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -8,7 +8,7 @@
 	margin-top: 10vh;
 	overflow-x: hidden;
 	p {
-		font-size: 20px;
+		font-size: 1.25rem;
 		font-family: $text-font;
 	}
 	h1 {
@@ -32,7 +32,7 @@
 				margin-left: 5vw;
 				h1 {
 					margin-bottom: 7vh;
-					font-size: 5vw;
+					font-size: 6rem;
 					animation: fadeInFromAbove 1s 0.3s ease-out backwards;
 				}
 				p {
@@ -64,7 +64,7 @@
 			animation: fadeIn 1s ease-out backwards;
 			h1 {
 				@include title-styles(white);
-				font-size: 5vw;
+				font-size: 6rem;
 			}
 		}
 		.tiles {
