--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -16,6 +16,7 @@ nav {
 		animation: slideFromLeft 0.9s ease-out;
 		a {
 			display: flex;
+			align-items: center;
 			text-decoration: none;
 			img {
 				height: 8vh;
@@ -24,12 +25,16 @@ nav {
 				margin-right: 1vw;
 			}
 			h4 {
+				flex-grow: 1;
 				font-family: $title-font;
-				font-size: 2rem;
+				font-size: 4vh;
 				font-weight: 300;
 				color: black;
 			}
 		}
+	}
+	.nav-button {
+		display: none;
 	}
 	ul {
 		display: grid;
@@ -69,6 +74,70 @@ nav {
 			li:nth-child(#{$i}) {
 				background-color: map-get($map: $color-map, $key: $i);
 				animation: fadeInFromRight 0.7s ($i * 0.2s) backwards ease-out;
+				transition: all ($i * 0.1s + 0.3s) ease-out;
+			}
+		}
+	}
+	@media screen and (max-width: 1350px) {
+		ul {
+			li {
+				a {
+					font-size: 1.5rem;
+				}
+			}
+		}
+	}
+	@media screen and (max-width: 1000px) {
+		position: absolute;
+		.nav-button {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-evenly;
+			position: fixed;
+			top: 3vh;
+			right: 3vh;
+			z-index: 5000;
+			height: 40px;
+			width: 40px;
+			opacity: 0.85;
+			background-color: $background-color;
+			border-radius: 5px;
+			.line {
+				background-color: $green5;
+				height: 6px;
+				width: 80%;
+				border-radius: 3px;
+			}
+		}
+		ul {
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: flex-end;
+			position: fixed;
+			top: 0;
+			right: 0;
+			height: 100%;
+			width: 30%;
+			opacity: 0.85;
+		}
+	}
+	@media screen and (min-width: 2500px) {
+		ul {
+			li {
+				a {
+					font-size: 3rem;
+				}
+			}
+		}
+	}
+	@media screen and (min-width: 3700px) {
+		ul {
+			li {
+				a {
+					font-size: 4.5rem;
+				}
 			}
 		}
 	}
