--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -121,7 +121,10 @@ nav {
       font-size: 1.5rem; } }
   @media screen and (max-width: 1000px) {
     nav {
-      position: absolute; }
+      position: absolute;
+      grid-template-columns: 1fr; }
+      nav .logo a h4 {
+        margin-right: 10vw; }
       nav .nav-button {
         display: flex;
         flex-direction: column;
@@ -152,6 +155,9 @@ nav {
         height: 100%;
         width: 30%;
         opacity: 0.85; } }
+  @media screen and (max-width: 700px) {
+    nav ul {
+      width: 50%; } }
   @media screen and (min-width: 2500px) {
     nav ul li a {
       font-size: 3rem; } }
