--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -121,6 +121,13 @@ nav {
 				height: 6px;
 				width: 80%;
 				border-radius: 3px;
+				transition: 0.5s;
+			}
+			.line-animated {
+				transform: rotate3d(1, 0.5, 1, 360deg);
+			}
+			.middle-line-animated {
+				transform: rotate3d(1, 0.5, 1, -360deg);
 			}
 		}
 		ul {
